# Kernova

./: .gitignore  README.md
changelogs/: Kernova fabric 26.1 v1.0.0-release.md  Kernova fabric 26.1 v1.0.1-release.md  Kernova fabric 26.1 v1.0.2-release.md  Kernova fabric 26.1.1 v1.0.0-release.md  Kernova fabric 26.1.1 v1.0.1-release.md  Kernova fabric 26.1.2 v1.0.0-release.md  Kernova neoforge 26.1 v0.1.0-beta.md  Kernova neoforge 26.1 v0.1.1-beta.md  Kernova neoforge 26.1 v0.1.2-beta.md  Kernova neoforge 26.1.1 v0.1.0-beta.md  Kernova neoforge 26.1.1 v0.1.1-beta.md  Kernova neoforge 26.1.2 v0.1.0-beta.md
list/common/config/: iris.properties  moreculling.toml  sodium-extra-options.json  sodium-options.json
list/config/: c2me.toml  dynamicfps.toml  entityculling.json  vmp.properties
list/fabric/config/: fastquit.toml
list/fabric/mods/: modlist.json
list/mods/: modlist.json
list/neoforge/config/defaultoptions/: options.txt
list/neoforge/mods/: modlist.json
publish/: config.json  publish.py
publish/notes/: 26.1-fabric.md  26.1-neoforge.md
updater/: pyproject.toml
updater/src/kernova_update/: __init__.py  builder.py  changelog.py  cli.py  integrations.py  models.py  modrinth.py  validation.py  versioning.py
updater/state/: version_history.json
updater/tests/: test_builder.py  test_cli.py  test_publish.py  test_repository_layout.py  test_validation.py  test_versioning.py
