[project]
name = "kernova-update"
version = "0"
description = "Terminal updater for Kernova modpack"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
kernova-update = "kernova_update.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kernova_update"]
